--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Portfolio Projects</a>
+						<a href="index.html" class="logo">Projects</a>
 					</header>
 
 
@@ -50,13 +50,13 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2>Analyzing Cyclist Data with Excel and SQL<br /></h2>
+									<h2>Generating Random Chorales and Ranking Chords with Python/Jupyter Notebooks<br /></h2>
 									<p>
 									</p>
 								</header>
-								<a href="" class="image main"><img src="images/bikes.webp" alt="" /></a>
+								<a href="" class="image main"><img src="images/Teacher-clipart-musical-notes-music-note-border-clipart-clipart.jpeg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/keithdeu/cyclist_data_analysis" target="_blank" class="button large">view project</a></li>
+									<li><a href="https://github.com/keithdeu/chorale_generator_and_chord_ranks" target="_blank" class="button large">view project</a></li>
 								</ul>
 							</article>
 
@@ -64,11 +64,11 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Visualizing Cancer Risk Data with Python <br /></a></h2>
+										<h2><a href="#">Analyzing Cyclist Data with Excel and SQL<br /></a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/Figure_1.png" alt="" /></a>
+									<a href="#" class="image main"><img src="images/bikes.webp" alt="" /></a>
 									<ul class="actions special">
-										<li><a href="https://github.com/keithdeu/cancer_risk_visualization" target="_blank" class="button">View Project</a></li>
+										<li><a href="https://github.com/keithdeu/cyclist_data_analysis" target="_blank" class="button">view project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -78,6 +78,15 @@
 									<a href="#" class="image fit"><img src="images/Cover-1024x768.jpg" alt="" /></a>
 									<ul class="actions special">
 										<li><a href="https://github.com/keithdeu/fitabit_analysis" target="_blank" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="#">Visualizing Cancer Risk Data with Python <br /></a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/Figure_1.png" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="https://github.com/keithdeu/cancer_risk_visualization" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 							</section>
@@ -108,7 +117,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">keithdeu@gmail.com</a></p>
+								<p><a href="#">keithdeu@gatech.edu</a></p>
 							</section>
 							<section>
 								<h3>Links</h3>
