--- a/index.html
+++ b/index.html
@@ -64,6 +64,15 @@
 							<section class="posts">
 								<article>
 									<header>
+										<h2><a href="#">Social Media Data Analysis with Excel, SQL, and Power BI<br /></a></h2>
+									</header>
+									<a href="#" class="image main"><img src="images/social-media-5187243_960_720.png" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="https://github.com/keithdeu/social_buzz_analysis" target="_blank" class="button">view project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h2><a href="#">Online Retail Sales Analysis with Excel and Power BI<br /></a></h2>
 									</header>
 									<a href="#" class="image main"><img src="images/Screenshot 2022-12-31 135858.jpg" alt="" /></a>
