--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 									</header>
 									<a href="#" class="image main"><img src="images/social-media-5187243_960_720.png" alt="" /></a>
 									<ul class="actions special">
-										<li><a href="https://github.com/keithdeu/social_buzz_analysis" target="_blank" class="button">view project</a></li>
+										<li><a href="https://github.com/keithdeu/social_buzz_analysis/blob/main/PP_Slides.pptx" target="_blank" class="button">view project</a></li>
 									</ul>
 								</article>
 								<article>
