--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 								</header>
 								<a href="" class="image main"><img src="images/Teacher-clipart-musical-notes-music-note-border-clipart-clipart.jpeg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/keithdeu/chorale_generator_and_chord_ranks" target="_blank" class="button large">view project</a></li>
+									<li><a href="https://github.com/keithdeu/chorale_generator_and_chord_ranks/blob/main/Chorale_Generator_and_Chord_Ranking.ipynb" target="_blank" class="button large">view project</a></li>
 								</ul>
 							</article>
 
@@ -77,7 +77,7 @@
 									</header>
 									<a href="#" class="image main"><img src="images/Screenshot 2022-12-31 135858.jpg" alt="" /></a>
 									<ul class="actions special">
-										<li><a href="https://github.com/keithdeu/online_retail_sales_analysis" target="_blank" class="button">view project</a></li>
+										<li><a href="https://github.com/keithdeu/online_retail_sales_analysis/blob/main/visualizations.pdf" target="_blank" class="button">view project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -86,7 +86,7 @@
 									</header>
 									<a href="#" class="image main"><img src="images/bikes.webp" alt="" /></a>
 									<ul class="actions special">
-										<li><a href="https://github.com/keithdeu/cyclist_data_analysis" target="_blank" class="button">view project</a></li>
+										<li><a href="https://github.com/keithdeu/cyclist_data_analysis/blob/main/cyclist_dashboard.xlsx" target="_blank" class="button">view project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -95,7 +95,7 @@
 									</header>
 									<a href="#" class="image fit"><img src="images/Cover-1024x768.jpg" alt="" /></a>
 									<ul class="actions special">
-										<li><a href="https://github.com/keithdeu/fitabit_analysis" target="_blank" class="button">View Project</a></li>
+										<li><a href="https://github.com/keithdeu/fitabit_analysis/blob/main/fitabit_activity.pdf" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -104,7 +104,7 @@
 									</header>
 									<a href="#" class="image fit"><img src="images/Figure_1.png" alt="" /></a>
 									<ul class="actions special">
-										<li><a href="https://github.com/keithdeu/cancer_risk_visualization" target="_blank" class="button">View Project</a></li>
+										<li><a href="https://github.com/keithdeu/cancer_risk_visualization/blob/main/cancerviz.py" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 							</section>
