--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 									<header>
 										<h2><a href="#">Social Media Data Analysis with Excel, SQL, and Power BI<br /></a></h2>
 									</header>
-									<a href="#" class="image main"><img src="images/social-media-5187243_960_720.png" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/social-media-5187243_960_720.png" alt="" /></a>
 									<ul class="actions special">
 										<li><a href="https://github.com/keithdeu/social_buzz_analysis/blob/main/PP_Slides.pptx" target="_blank" class="button">view project</a></li>
 									</ul>
@@ -75,7 +75,7 @@
 									<header>
 										<h2><a href="#">Online Retail Sales Analysis with Excel and Power BI<br /></a></h2>
 									</header>
-									<a href="#" class="image main"><img src="images/Screenshot 2022-12-31 135858.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/Screenshot 2022-12-31 135858.jpg" alt="" /></a>
 									<ul class="actions special">
 										<li><a href="https://github.com/keithdeu/online_retail_sales_analysis/blob/main/visualizations.pdf" target="_blank" class="button">view project</a></li>
 									</ul>
@@ -84,7 +84,7 @@
 									<header>
 										<h2><a href="#">Analyzing Cyclist Data with Excel and SQL<br /></a></h2>
 									</header>
-									<a href="#" class="image main"><img src="images/bikes.webp" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/bikes.webp" alt="" /></a>
 									<ul class="actions special">
 										<li><a href="https://github.com/keithdeu/cyclist_data_analysis/blob/main/cyclist_dashboard.xlsx" target="_blank" class="button">view project</a></li>
 									</ul>
