--- a/index.html
+++ b/index.html
@@ -82,6 +82,15 @@
 								</article>
 								<article>
 									<header>
+										<h2><a href="#">Sentiment Analysis and K Nearest Neighbor Model on Airline Data<br /></a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/42253240_m-696x464.jpg" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="https://github.com/keithdeu/airline_data_analysis/blob/main/KNN_model.ipynb" target="_blank" class="button">view project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h2><a href="#">Analyzing Cyclist Data with Excel and SQL<br /></a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/bikes.webp" alt="" /></a>
