--- a/index.html
+++ b/index.html
@@ -64,6 +64,15 @@
 							<section class="posts">
 								<article>
 									<header>
+										<h2><a href="#">Simulating Flu Spread with Python and Excel<br /></a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/Screenshot 2024-01-14 125218.png" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="https://github.com/keithdeu/flu_spread_simulation/blob/main/Pandemic%20Flu%20Spread%20Report.pdf" target="_blank" class="button">view project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h2><a href="#">Social Media Data Analysis with Excel, SQL, and Power BI<br /></a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/social-media-5187243_960_720.png" alt="" /></a>
