update index.html file

--- a/index.html
+++ b/index.html
@@ -50,18 +50,27 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2>Generating Random Chorales and Ranking Chords with Python/Jupyter Notebooks<br /></h2>
+									<h2>Predicting The Probability Of Loan Default in RStudio<br /></h2>
 									<p>
 									</p>
 								</header>
-								<a href="" class="image main"><img src="images/Teacher-clipart-musical-notes-music-note-border-clipart-clipart.jpeg" alt="" /></a>
+								<a href="" class="image main"><img src="images/logo-1628198634_1723v.webp" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/keithdeu/chorale_generator_and_chord_ranks/blob/main/Chorale_Generator_and_Chord_Ranking.ipynb" target="_blank" class="button large">view project</a></li>
+									<li><a href="https://github.com/keithdeu/bank_loan_classification/blob/main/Final_Report.pdf" target="_blank" class="button large">view project</a></li>
 								</ul>
 							</article>
 
 						<!-- Posts -->
 							<section class="posts">
+								<article>
+									<header>
+										<h2><a href="#">Generating Random Chorales and Ranking Chords with Python/Jupyter Notebooks<br /></a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/Teacher-clipart-musical-notes-music-note-border-clipart-clipart.jpeg" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="https://github.com/keithdeu/chorale_generator_and_chord_ranks/blob/main/Chorale_Generator_and_Chord_Ranking.ipynb" target="_blank" class="button">view project</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<h2><a href="#">Simulating Flu Spread with Python and Excel<br /></a></h2>
