--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 									<p>
 									</p>
 								</header>
-								<a href="" class="image main"><img src="images/logo-1628198634_1723v.webp" alt="" /></a>
+								<a href="" class="image main"><img src="images/20943913.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/keithdeu/bank_loan_classification/blob/main/Final_Report.pdf" target="_blank" class="button large">view project</a></li>
 								</ul>
